appId: com.samroberts.pickup
---
- launchApp:
    permissions:
      location: always

# login
- runFlow: helpers/login.yaml

- tapOn:
    id: "game-2"

- assertVisible:
    text: "BASKETBALL"

- assertVisible:
    text: "Friday Basketball"

- scroll

- assertVisible:
    text: "7 SPOTS LEFT"
